[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Nichts <nichts@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
thiserror = "1.0.9"
num = "0.2.0"
nalgebra = "0.19.0"
regex = "1.3.1"
lazy_static = "1.4.0"
ego-tree = "0.6.2"
nom = "5.0.1"
